--- a/site/public/index.html
+++ b/site/public/index.html
@@ -26,6 +26,15 @@
                     <button class="btn-primary">Cadastro</button>
                 </div>
             </header>
+            <div class="caixa-h1">
+                <div>
+                    <h1>Potencializando o <br> seu trabalho Home Office</h1>
+                    <p>O monitoramento que a sua máquina precisa</p>
+                    <div class="button-group">
+                        <button class="btn-primary">Saiba mais</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
