--- a/site/public/index.html
+++ b/site/public/index.html
@@ -8,34 +8,44 @@
     <link rel="stylesheet" href="./css/global.css">
 </head>
 <body>
-    <section id="home">
-        <div class="container">
-            <header class="navbar">
-                <img class="logo" src="./assets/img/logo-navbar.png" alt="">
-                <nav>
-                    <ul>
-                        <li><a href="#">home</a></li>
-                        <li><a href="#">Saiba mais</a></li>
-                        <li><a href="#">Contato</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Serviços</a></li>
-                    </ul>
-                </nav>
-                <div class="button-group">
-                    <button class="btn-secundary">Login</button>
-                    <button class="btn-primary">Cadastro</button>
-                </div>
-            </header>
-            <div class="caixa-h1">
-                <div>
-                    <h1>Potencializando o <br> seu trabalho Home Office</h1>
-                    <p>O monitoramento que a sua máquina precisa</p>
+    <main>
+        
+        <section id="home">
+            <div class="container">
+                <header class="navbar">
+                    <img class="logo" src="./assets/img/logo-navbar.png" alt="">
+                    <nav>
+                        <ul>
+                            <li><a href="#">home</a></li>
+                            <li><a href="#">Saiba mais</a></li>
+                            <li><a href="#">Contato</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Serviços</a></li>
+                        </ul>
+                    </nav>
                     <div class="button-group">
-                        <button class="btn-primary">Saiba mais</button>
+                        <button class="btn-secundary">Login</button>
+                        <button class="btn-primary">Cadastro</button>
+                    </div>
+                </header>
+                <div class="caixa-h1">
+                    <div>
+                        <h1>Potencializando o <br> seu trabalho Home Office</h1>
+                        <p>O monitoramento que a sua máquina precisa</p>
+                        <div class="button-group">
+                            <button class="btn-primary">Saiba mais</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <section id="section-proposito">
+            <div class="caixa-proposito">
+                <h2>A <span>yotte</span> tem como propósito</h2>
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
