--- a/site/public/index.html
+++ b/site/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yotte</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/global.css">
 </head>
@@ -16,7 +16,7 @@
                     <img class="logo" src="./assets/img/logo-navbar.png" alt="">
                     <nav>
                         <ul>
-                            <li><a href="#">home</a></li>
+                            <li><a href="#">Home</a></li>
                             <li><a href="#">Saiba mais</a></li>
                             <li><a href="#">Contato</a></li>
                             <li><a href="#">Blog</a></li>
@@ -24,16 +24,16 @@
                         </ul>
                     </nav>
                     <div class="button-group">
-                        <button class="btn-secundary">Login</button>
-                        <button class="btn-primary">Cadastro</button>
+                        <button class="btn-login">Fazer Login</button>
+                        <button class="btn-signup">Cadastrar</button>
                     </div>
                 </header>
                 <div class="caixa-h1">
                     <div>
                         <h1>Potencializando o <br> seu trabalho Home Office</h1>
                         <p>O monitoramento que a sua máquina precisa</p>
-                        <div class="button-group">
-                            <button class="btn-primary">Saiba mais</button>
+                        <div class="button-landing">
+                            <button class="btn-saiba">Saiba mais</button>
                         </div>
                     </div>
                 </div>
@@ -43,6 +43,11 @@
         <section id="section-proposito">
             <div class="caixa-proposito">
                 <h2>A <span>yotte</span> tem como propósito</h2>
+            </div>
+            <div class="imgs-abt">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
             </div>
         </section>
 
